fix broken layout caused by 62c1962

--- a/css/list.css
+++ b/css/list.css
@@ -61,8 +61,7 @@ body {
 
 .slider img{
   width:100%;
-  height: 250px;
-  position:absolute; 
+  height: calc(23vw);
   left:0;
   /*display:none;*/
 }
@@ -79,7 +78,8 @@ body {
   border: none;
   display:inline-block;
   position:absolute;
-  transform: translateY(90px);
+  transform: translateY(-50%);
+  top: 50%;
 
 }
 
@@ -96,12 +96,17 @@ body {
 
 /*item-layout*/
 
-.item-layout {
+.section1{
+    position: relative;
+    top: 30px;
+}
+
+/*.item-layout {
     width: 1000px;
     position: relative;
     margin-left: auto;
     margin-right: auto;
-}
+}*/
 
 .item {
     max-width: 220px;
